# Pomodouroboros

./: Linux-gui.requirements.txt  README.md  debian-dev-install  dev-requirements.txt  encrust_setup.py  linux-dep-pinner.dockerfile  mac-dev-install  macOS-gui.requirements.txt  mypy.ini  pin-in-docker  pindeps  punch-list.md  py2app_setup.py  pyproject.toml  requirements-linux.txt  requirements.in  requirements.txt  runme  setup.cfg  testme
.github/workflows/: test-ui.yml
IBFiles/: GoalListWindow.xib  IntentionEditor.xib  MainMenu.xib
IBFiles/IBFiles.xcodeproj/: project.pbxproj
PomodouroborosMac/: GoalListWindow.xib  IntentionEditor.xib  MainMenu.xib  ProgressHUD.xib
PomodouroborosMac/PomodouroborosMac.xcodeproj/: project.pbxproj
mac/: CiPomodouroboros.pyw
src/: scratch.py
src/pomodouroboros/: common.py  pomcommon.py  pommodel.py  storage.py
src/pomodouroboros/linux/: LinuxLegacyPom.cmb  gobj_utils.py  gproptest.py  gtk_list_detail.py  gtk_progress_bar.py  linuxlegacypom.ui  old_gtk_gui.py  platspec.py  progbar.css  progress_demo.py
src/pomodouroboros/macos/: hotkeys.py  intentions_gui.py  launch_at_login.py  mac_gui.py  mac_utils.py  multiple_choice.py  old_mac_gui.py  progress_hud.py  sessions_gui.py
src/pomodouroboros/macos/test/: test_day_progression.py  test_new_gui.py  test_nib_init.py
src/pomodouroboros/model/: boundaries.py  debugger.py  ideal.py  intention.py  intervals.py  nexus.py  observables.py  rescheduling.py  schema.py  sessions.py  storage.py  streaks.py  util.py
src/pomodouroboros/model/test/: test_model.py  test_observables.py  test_sessions.py
src/pomodouroboros/test/: test_pommodel.py
