[build-system]
requires = [
    "setuptools>=42,<81",
]
build-backend = "setuptools.build_meta"

[project]
name = "Pomodouroboros"
authors=[
    { name = "Glyph", email = "code@glyph.im" },
]
description = "An extremely opinionated pomodoro system."
readme = "README.md"
dependencies = [
    # core dependencies
    "twisted[tls,http2]",
    "python-dateutil",
    "ulid-py",
    "datetype",
    "fritter",
]
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.5.5"

[project.optional-dependencies]

# Multiple separate 'GUI' environments to work around
# https://github.com/jazzband/pip-tools#cross-environment-usage-of-requirementsinrequirementstxt-and-pip-compile

# Possibly we should be using https://gitlab.com/mitchhentges/pip-compile-cross-platform instead

macOS-gui = [
    "py2app ; sys_platform == 'darwin'",

    # https://github.com/ronaldoussoren/py2app/issues/563
    # https://github.com/ronaldoussoren/py2app/issues/564
    "setuptools<81",

    "pyobjc-core ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa ; sys_platform == 'darwin'",
    "pyobjc-framework-ExceptionHandling ; sys_platform == 'darwin'",
    "pyobjc-framework-UserNotifications ; sys_platform == 'darwin'",
    "pyobjc-framework-CFNetwork ; sys_platform == 'darwin'",
    "pyobjc-framework-ServiceManagement ; sys_platform == 'darwin'",
    "quickmacapp ; sys_platform == 'darwin'",
    "quickmachotkey ; sys_platform == 'darwin'",
]

Linux-gui = [
    "ewmh ; sys_platform == 'linux'",
    "pycairo ; sys_platform == 'linux'",
    # Pinning below 3.52 because it now needs libgirepository-2.0 which is not
    # yet in standard debian/python docker images
    "PyGObject<3.52 ; sys_platform == 'linux'",
    "python-xlib ; sys_platform == 'linux'",
    "pydbus ; sys_platform == 'linux'",
]

dev = [
    "pip",
    "pip-tools",

    # https://github.com/jazzband/pip-tools/issues/2319
    "pip<26",

    # need to repeat the pin from macOS-GUI or they will sadly conflict
    "setuptools<81",

    "mypy",
    "mypy-zope",
    "types-python-dateutil",
    "pygobject-stubs",
    "pycairo",                  # pycairo doesn't have separate stubs, need the
                                # actual pycairo for type checking
    "types-python-xlib",
    "encrust ; sys_platform == 'darwin'",
]

[project.urls]
Source = "https://github.com/glyph/Pomodouroboros"
Bug-Tracker = "https://github.com/glyph/Pomodouroboros/issues"
[project.scripts]
pom = "pomodouroboros.cli:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]

ignore = [
    "E731",
]
